--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".application.ui.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
+    <Button
+        android:id="@+id/btnStartSurveyHome"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_height="wrap_content"
+        android:text="Mulai Survei" />
 </LinearLayout>
