--- a/app/src/main/res/layout/list_question.xml
+++ b/app/src/main/res/layout/list_question.xml
@@ -42,6 +42,13 @@
             android:layout_weight="1"
             android:text="10" />
 
+        <RadioButton
+            android:id="@+id/radioTTDLQ"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TTD" />
+
     </RadioGroup>
 
     <EditText
