--- a/app/src/main/res/layout/activity_select_hospital.xml
+++ b/app/src/main/res/layout/activity_select_hospital.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".application.ui.AreaActivity">
+    tools:context=".application.ui.SelectHospitalActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/tbArea"
+            android:id="@+id/tbSHospital"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
@@ -21,9 +21,8 @@
             app:titleTextColor="@android:color/white" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvArea"
+            android:id="@+id/rvSHospital"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
-
 </android.support.constraint.ConstraintLayout>
