--- a/app/src/main/res/layout/activity_select_bab.xml
+++ b/app/src/main/res/layout/activity_select_bab.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".application.ui.QuestionActivity">
+    tools:context=".application.ui.SelectBabActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/tbQuestion"
+            android:id="@+id/tbSBab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
@@ -21,18 +21,8 @@
             app:titleTextColor="@android:color/white" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvQuestion"
+            android:id="@+id/rvSBab"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-        </android.support.v7.widget.RecyclerView>
-
-        <Button
-            android:id="@+id/btnSaveQuestion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Simpan" />
+            android:layout_height="match_parent" />
     </LinearLayout>
-
 </android.support.constraint.ConstraintLayout>
