--- a/app/src/main/res/layout/activity_select_surverior.xml
+++ b/app/src/main/res/layout/activity_select_surverior.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".application.ui.BabActivity">
+    tools:context=".application.ui.SelectSurveriorActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/tbBab"
+            android:id="@+id/tbSSurverior"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
@@ -21,7 +21,7 @@
             app:titleTextColor="@android:color/white" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvBab"
+            android:id="@+id/rvSSurverior"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
