add answer function ~!

--- a/app/src/main/res/layout/list_select_bab.xml
+++ b/app/src/main/res/layout/list_select_bab.xml
@@ -13,5 +13,7 @@
         android:id="@+id/tvBabLSB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textStyle="bold"
         tools:text="Contoh Bab" />
 </LinearLayout>
