--- a/app/src/main/res/layout/list_running_task.xml
+++ b/app/src/main/res/layout/list_running_task.xml
@@ -21,12 +21,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
+            android:textSize="15sp"
+            android:textStyle="bold"
             tools:text="Nama kegiatan" />
 
         <ImageView
             android:id="@+id/imgDeleteLRT"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:scaleType="fitXY"
             app:srcCompat="@drawable/ic_delete_red_24dp"
             tools:ignore="VectorDrawableCompat" />
