--- a/app/src/main/res/layout/list_select_area.xml
+++ b/app/src/main/res/layout/list_select_area.xml
@@ -13,5 +13,7 @@
         android:id="@+id/tvAreaLSA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textStyle="bold"
         tools:text="Contoh Area" />
 </LinearLayout>
